Multiview not working with OpenGL render using scene settings #58517

Closed
opened 2018-12-02 14:18:35 +01:00 by Shinsuke Irie · 8 comments
Member

System Information
Operating system: Ubuntu 18.10
Graphics card: NVIDIA Geforce GTX 1070

Blender Version
Broken: 2.79b (release and master 335e1b507b), 2.80 (8c620c8e2b and 925380050d)

Short description of error
When running bpy.ops.render.opengl(view_context=False), the multiview settings (bpy.context.scene.render.use_multiview = True, etc.) are ignored unreasonably.

Exact steps for others to reproduce the error
multiview_render_test.blend

  • Start Blender from command line
  • Open multiview_render_test.blend

Click "Run Script" button in the Text Editor

Console output of the result is as follows:

=== Multiview render tests ===

(1) Single Frame

a. Not OpenGL
Saved: '/tmp/test_L.png'
Saved: '/tmp/test_R.png'
 Time: 00:00.19 (Saving: 00:00.12)

b. OpenGL (view_context=True)
Saved: '/tmp/test_L.png'
Saved: '/tmp/test_R.png'
OpenGL Render written to '/tmp/test_R.png'
c. OpenGL (view_context=False)
Saved: '/tmp/test.png'
OpenGL Render written to '/tmp/test.png'

(1) Animation

a. Not OpenGL
Saved: '/tmp/test0001_L.png'
Saved: '/tmp/test0001_R.png'
 Time: 00:00.13 (Saving: 00:00.07)

Saved: '/tmp/test0002_L.png'
Saved: '/tmp/test0002_R.png'
 Time: 00:00.13 (Saving: 00:00.07)

Saved: '/tmp/test0003_L.png'
Saved: '/tmp/test0003_R.png'
 Time: 00:00.13 (Saving: 00:00.07)

Saved: '/tmp/test0004_L.png'
Saved: '/tmp/test0004_R.png'
 Time: 00:00.13 (Saving: 00:00.07)

Saved: '/tmp/test0005_L.png'
Saved: '/tmp/test0005_R.png'
 Time: 00:00.13 (Saving: 00:00.07)

b. OpenGL (view_context=True)
Saved: '/tmp/test0001_L.png'
Saved: '/tmp/test0002_L.png'
Saved: '/tmp/test0003_L.png'
Saved: '/tmp/test0004_L.png'
Saved: '/tmp/test0002_R.png'
Saved: '/tmp/test0001_R.png'
Saved: '/tmp/test0005_L.png'
Saved: '/tmp/test0004_R.png'
Saved: '/tmp/test0003_R.png'
Saved: '/tmp/test0005_R.png'
c. OpenGL (view_context=False)
Saved: '/tmp/test0001.png'
Saved: '/tmp/test0005.png'
Saved: '/tmp/test0002.png'
Saved: '/tmp/test0004.png'
Saved: '/tmp/test0003.png'

Only OpenGL render with view_context=False did single view rendering incorrectly.

Solution
I believe the following patch fixes the bug:

diff --git a/source/blender/editors/render/render_opengl.c b/source/blender/editors/render/render_opengl.c
index 78cedf099a1..e1d081d7e15 100644
--- a/source/blender/editors/render/render_opengl.c
+++ b/source/blender/editors/render/render_opengl.c
@@ -165,10 +165,10 @@ static bool screen_opengl_is_multiview(OGLRender *oglrender)
 	RegionView3D *rv3d = oglrender->rv3d;
 	RenderData *rd = &oglrender->scene->r;
 
-	if ((rd == NULL) || ((!oglrender->is_sequencer) && ((rv3d == NULL) || (v3d == NULL))))
+	if ((rd == NULL) || ((v3d != NULL) && (rv3d == NULL)))
 		return false;
 
-	return (rd->scemode & R_MULTIVIEW) && ((oglrender->is_sequencer) || (rv3d->persp == RV3D_CAMOB && v3d->camera));
+	return (rd->scemode & R_MULTIVIEW) && ((v3d == NULL) || (rv3d->persp == RV3D_CAMOB && v3d->camera));
 }
 
 static void screen_opengl_views_setup(OGLRender *oglrender)
@@ -212,7 +212,7 @@ static void screen_opengl_views_setup(OGLRender *oglrender)
 		}
 	}
 	else {
-		if (!oglrender->is_sequencer)
+		if (v3d)
 			RE_SetOverrideCamera(oglrender->re, V3D_CAMERA_SCENE(oglrender->scene, v3d));
 
 		/* remove all the views that are not needed */
**System Information** Operating system: Ubuntu 18.10 Graphics card: NVIDIA Geforce GTX 1070 **Blender Version** Broken: 2.79b (release and master 335e1b507b1), 2.80 (8c620c8e2b3 and 925380050d0) **Short description of error** When running bpy.ops.render.opengl(view_context=False), the multiview settings (bpy.context.scene.render.use_multiview = True, etc.) are ignored unreasonably. **Exact steps for others to reproduce the error** [multiview_render_test.blend](https://archive.blender.org/developer/F5789540/multiview_render_test.blend) - Start Blender from command line - Open multiview_render_test.blend # Click "Run Script" button in the Text Editor Console output of the result is as follows: ``` === Multiview render tests === (1) Single Frame a. Not OpenGL Saved: '/tmp/test_L.png' Saved: '/tmp/test_R.png' Time: 00:00.19 (Saving: 00:00.12) b. OpenGL (view_context=True) Saved: '/tmp/test_L.png' Saved: '/tmp/test_R.png' OpenGL Render written to '/tmp/test_R.png' c. OpenGL (view_context=False) Saved: '/tmp/test.png' OpenGL Render written to '/tmp/test.png' (1) Animation a. Not OpenGL Saved: '/tmp/test0001_L.png' Saved: '/tmp/test0001_R.png' Time: 00:00.13 (Saving: 00:00.07) Saved: '/tmp/test0002_L.png' Saved: '/tmp/test0002_R.png' Time: 00:00.13 (Saving: 00:00.07) Saved: '/tmp/test0003_L.png' Saved: '/tmp/test0003_R.png' Time: 00:00.13 (Saving: 00:00.07) Saved: '/tmp/test0004_L.png' Saved: '/tmp/test0004_R.png' Time: 00:00.13 (Saving: 00:00.07) Saved: '/tmp/test0005_L.png' Saved: '/tmp/test0005_R.png' Time: 00:00.13 (Saving: 00:00.07) b. OpenGL (view_context=True) Saved: '/tmp/test0001_L.png' Saved: '/tmp/test0002_L.png' Saved: '/tmp/test0003_L.png' Saved: '/tmp/test0004_L.png' Saved: '/tmp/test0002_R.png' Saved: '/tmp/test0001_R.png' Saved: '/tmp/test0005_L.png' Saved: '/tmp/test0004_R.png' Saved: '/tmp/test0003_R.png' Saved: '/tmp/test0005_R.png' c. OpenGL (view_context=False) Saved: '/tmp/test0001.png' Saved: '/tmp/test0005.png' Saved: '/tmp/test0002.png' Saved: '/tmp/test0004.png' Saved: '/tmp/test0003.png' ``` Only OpenGL render with view_context=False did single view rendering incorrectly. **Solution** I believe the following patch fixes the bug: ``` diff --git a/source/blender/editors/render/render_opengl.c b/source/blender/editors/render/render_opengl.c index 78cedf099a1..e1d081d7e15 100644 --- a/source/blender/editors/render/render_opengl.c +++ b/source/blender/editors/render/render_opengl.c @@ -165,10 +165,10 @@ static bool screen_opengl_is_multiview(OGLRender *oglrender) RegionView3D *rv3d = oglrender->rv3d; RenderData *rd = &oglrender->scene->r; - if ((rd == NULL) || ((!oglrender->is_sequencer) && ((rv3d == NULL) || (v3d == NULL)))) + if ((rd == NULL) || ((v3d != NULL) && (rv3d == NULL))) return false; - return (rd->scemode & R_MULTIVIEW) && ((oglrender->is_sequencer) || (rv3d->persp == RV3D_CAMOB && v3d->camera)); + return (rd->scemode & R_MULTIVIEW) && ((v3d == NULL) || (rv3d->persp == RV3D_CAMOB && v3d->camera)); } static void screen_opengl_views_setup(OGLRender *oglrender) @@ -212,7 +212,7 @@ static void screen_opengl_views_setup(OGLRender *oglrender) } } else { - if (!oglrender->is_sequencer) + if (v3d) RE_SetOverrideCamera(oglrender->re, V3D_CAMERA_SCENE(oglrender->scene, v3d)); /* remove all the views that are not needed */ ```
Author
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Clément Foucault was assigned by Sebastian Parborg 2018-12-07 16:59:23 +01:00
Clément Foucault was unassigned by Jeroen Bakker 2019-03-20 14:53:45 +01:00
Jeroen Bakker self-assigned this 2019-03-20 14:53:45 +01:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Jeroen Bakker removed their assignment 2019-03-22 09:13:16 +01:00
Dalai Felinto was assigned by Jeroen Bakker 2019-03-22 09:13:16 +01:00
Member

Added subscribers: @dfelinto, @Jeroen-Bakker

Added subscribers: @dfelinto, @Jeroen-Bakker
Member

@dfelinto need your guidance.
according to https://git.blender.org/gitweb/gitweb.cgi/blender.git/commit/d5f1b9c22233 viewport rendering of multi view is not supported. Is that still the case?

Would like to have your opinion as this Task might be a feature request and not a bug. So what is intended by design?

As this is a b279 issue I lowered the priority for now.

@dfelinto need your guidance. according to https://git.blender.org/gitweb/gitweb.cgi/blender.git/commit/d5f1b9c22233 viewport rendering of multi view is not supported. Is that still the case? Would like to have your opinion as this Task might be a feature request and not a bug. So what is intended by design? As this is a b279 issue I lowered the priority for now.

"Viewport Rendering doesn't support Multi-View"

That was referring to Cycles render preview. VIewport OpenGL render always worked.
The patch may be correct, let me get my head around it a bit.

> "Viewport Rendering doesn't support Multi-View" That was referring to Cycles render preview. VIewport OpenGL render always worked. The patch may be correct, let me get my head around it a bit.

This issue was referenced by 5f45cbb26e

This issue was referenced by 5f45cbb26ec853b09b88c795c9b6107425f91f8a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for the patch, committed in the 2.80 repository.

Thanks for the patch, committed in the 2.80 repository.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58517
No description provided.